Correção do path da página "Primeiro projeto".

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -99,7 +99,7 @@
                                             projeto</h1>
                                         <p class="ift-margin-bottom-30">Site feito com HTML, CSS, Javascript
                                             para uma loja de roupas.</p>
-                                        <a href="../pages/portfolio/manage-it.html"
+                                        <a href="portfolio/manage-it.html"
                                             class="ift-btn ift-btn-large ift-btn-orange-no-scale" target="_blank">Ver
                                             projeto</a>
                                     </div>
