Adição do botão "GitHub"

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -133,7 +133,10 @@
                                 </div>
 
                                 <p class="ift-margin-bottom-15">igorfurtadot@gmail.com</p>
-                                <p>+55 (83) 9 9623-7452</p>
+                                <p class="ift-margin-bottom-15">+55 (83) 9 9623-7452</p>
+                                <a href="https://github.com/igorfurtado"
+                                    class="ift-btn ift-btn-large ift-btn-dark" target="_blank">GitHub
+                                    <ion-icon name="logo-github"></ion-icon></a>
 
                             </div>
 
