Atualização de links "href".

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                                 </div>
                                                 <img src="imagens/thumb_imagens/thumb-1.jpg" alt="Nome do projeto 01"
                                                     title="Nome do projeto 01" class="ift-scale-up" />
-                                                <a href="../HTML+CSS+JS/pages/portfolio/manage-it.html"
+                                                <a href="https://github.com/igorfurtado/manage_It"
                                                     class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
                                                     site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
