Correção de link "href".

--- a/pages/portfolio/manage-it.html
+++ b/pages/portfolio/manage-it.html
@@ -131,9 +131,8 @@
                                         <p><span class="ift-text-orange">Projeto: </span>Aplicativo Mobile</p>
                                         <p><span class="ift-text-orange">Cliente: </span>Manage It</p>
                                         <p><span class="ift-text-orange">Serviços: </span>UX, UI, Prototipagem</p>
-                                        <a href="#"
-                                            class="ift-btn ift-btn-medium ift-btn-orange ift-margin-top-15">visitar
-                                            site
+                                        <a href="https://github.com/igorfurtado/manage_It"
+                                            class="ift-btn ift-btn-medium ift-btn-orange ift-margin-top-15">GitHub
                                             <ion-icon name="arrow-redo-sharp">
                                             </ion-icon>
                                         </a>
