--- a/index.html
+++ b/index.html
@@ -216,8 +216,7 @@
                                         <div class="col-sm-12 col-md-12 col-lg-4 order-2 order-sm-2 order-md-1">
                                             <div class="ift-portfolio-item-info ift-text-light ift-fade-from-left">
                                                 <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
-                                                    Meu primeiro
-                                                    projeto</h1>
+                                                    Manage It! Aplicativo Mobile</h1>
                                                 <p class="ift-margin-bottom-30">Site feito com HTML, CSS, Javascript
                                                     para uma loja de roupas.</p>
                                                 <a href="https://github.com/igorfurtado/manage_It"
@@ -232,7 +231,7 @@
                                                 <div
                                                     class="ift-portfolio-item-box d-none d-sm-none d-lg-block ift-scale-right">
                                                 </div>
-                                                <img src="imagens/thumb_imagens/thumb-1.jpg" alt="Nome do projeto 01"
+                                                <img src="imagens/thumb_imagens/thumb-2.jpg" alt="Nome do projeto 01"
                                                     title="Nome do projeto 01" class="ift-scale-up" />
                                                 <a href="pages/portfolio/manage-it.html"
                                                     class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
@@ -263,7 +262,7 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="imagens/thumb_imagens/thumb-2.jpg" alt="Nome do projeto 02"
+                                                <img src="imagens/thumb_imagens/thumb-1.jpg" alt="Nome do projeto 02"
                                                     title="Nome do projeto 02" />
                                                 <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
