--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -95,8 +95,7 @@
                                     <div class="ift-portfolio-item-info ift-text-light" data-aos="fade-right"
                                         data-aos-delay="200">
                                         <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
-                                            Meu primeiro
-                                            projeto</h1>
+                                            Manage It! Aplicativo Mobile</h1>
                                         <p class="ift-margin-bottom-30">Site feito com HTML, CSS, Javascript
                                             para uma loja de roupas.</p>
                                         <a href="https://github.com/igorfurtado/manage_It"
@@ -107,7 +106,7 @@
                                 <div class="col-sm-12 col-lg-6 offset-lg-2 order-1 order-lg-2 col-xl-6 offset-xl-1">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="../imagens/thumb_imagens/thumb-1.jpg" alt="Nome do projeto 01"
+                                        <img src="../imagens/thumb_imagens/thumb-2.jpg" alt="Nome do projeto 01"
                                             title="Nome do projeto 01" data-aos="flip-left" data-aos-offset="300"
                                             data-aos-delay="300" />
                                         <a href="portfolio/manage-it.html"
@@ -138,7 +137,7 @@
                                 <div class="col-sm-12 col-lg-6 order-1 order-lg-2">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="../imagens/thumb_imagens/thumb-2.jpg" alt="Nome do projeto 02"
+                                        <img src="../imagens/thumb_imagens/thumb-1.jpg" alt="Nome do projeto 02"
                                             title="Nome do projeto 02" data-aos="flip-left" data-aos-offset="300"
                                             data-aos-delay="300" />
                                         <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
