Atualização da descrição do primeiro projeto.

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -97,7 +97,7 @@
                                         <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
                                             Manage It! Aplicativo Mobile</h1>
                                         <p class="ift-margin-bottom-30">Site feito com HTML, CSS, Javascript
-                                            para uma loja de roupas.</p>
+                                            para apresentação do aplicativo Manage It.</p>
                                         <a href="https://github.com/igorfurtado/manage_It"
                                             class="ift-btn ift-btn-large ift-btn-orange-no-scale" target="_blank">Ver
                                             projeto</a>
