Atualização dos links "href".

--- a/404.html
+++ b/404.html
@@ -27,13 +27,13 @@
                         <h1 class="ift-title ift-text-orange ift-title-x-large">Oxe!</h1>
                         <p class="ift-text-light">A página que você tentou acessar não existe mais ou você digitou um
                             endereço errado.</p>
-                        <a href="../HTML+CSS+JS/index.html"
+                        <a href="index.html"
                             class="ift-btn ift-btn-large ift-btn-orange ift-margin-top-15 ift-toggle-modal">Retornar à
                             home</a>
                     </div>
 
                     <div class="col-12 col-sm-12 col-lg-7 ift-margin-top-404">
-                        <img src="../HTML+CSS+JS/imagens/logo-IF-erro-404.svg" class="ift-img-responsive" />
+                        <img src="imagens/logo-IF-erro-404.svg" class="ift-img-responsive" />
                     </div>
 
                 </div>
