--- a/pages/portfolio/manage-it.html
+++ b/pages/portfolio/manage-it.html
@@ -171,7 +171,7 @@
         </section>
 
         <main class="ift-post">
-            <div class="container">
+            <div class="container" style="padding-bottom: 300px;">
                 <div class="row">
                     <div class="col-sm-12">
                         <section class="ift-post-section">
