--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
             </div>
             <div class="row ift-margin-top-15">
                 <div class="col-sm-12">
-                    <form class="ift-form action="
+                    <form
+                        action="
                         https://icloud.us5.list-manage.com/subscribe/post?u=3d4da86d1e591ca883f77e81a&amp;id=83c694331a"
-                        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                        target="_blank" novalidate>
+                        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                        class="ift-form validate" target="_blank" novalidate>
                         <div class="row ift-margin-bottom-15">
                             <div class="col-sm-12 col-md-6">
                                 <label for="mce-NOME" class="ift-text-light ">Nome</label>
@@ -413,3 +414,52 @@
 </body>
 
 </html>
+
+
+
+
+<!-- Begin Mailchimp Signup Form -->
+<div id="mc_embed_signup">
+    <form action="https://icloud.us5.list-manage.com/subscribe/post?u=3d4da86d1e591ca883f77e81a&amp;id=83c694331a"
+        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
+        novalidate>
+        <div id="mc_embed_signup_scroll">
+            <h2>Subscribe</h2>
+            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+            <div class="mc-field-group">
+                <label for="mce-NOME">Nome <span class="asterisk">*</span>
+                </label>
+                <input type="text" value="" name="NOME" class="required" id="mce-NOME">
+            </div>
+            <div class="mc-field-group">
+                <label for="mce-EMAIL">E-mail <span class="asterisk">*</span>
+                </label>
+                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+            </div>
+            <div class="mc-field-group size1of2">
+                <label for="mce-PHONE">Telefone </label>
+                <input type="text" name="PHONE" class="" value="" id="mce-PHONE">
+            </div>
+            <div class="mc-field-group">
+                <label for="mce-SITE">Site </label>
+                <input type="url" value="" name="SITE" class=" url" id="mce-SITE">
+            </div>
+            <div class="mc-field-group">
+                <label for="mce-MENSAGEM">Deixe abaixo sua mensagem <span class="asterisk">*</span>
+                </label>
+                <input type="text" value="" name="MENSAGEM" class="required" id="mce-MENSAGEM">
+            </div>
+            <div id="mce-responses" class="clear">
+                <div class="response" id="mce-error-response" style="display:none"></div>
+                <div class="response" id="mce-success-response" style="display:none"></div>
+            </div>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                    name="b_3d4da86d1e591ca883f77e81a_83c694331a" tabindex="-1" value=""></div>
+            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
+                    class="button"></div>
+        </div>
+    </form>
+</div>
+
+<!--End mc_embed_signup-->
