--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap"
         rel="stylesheet">
-    <link rel="icon" type="imagem/png" href="../LAYOUT/logo-IF-front-end_shortcut.png" />
+    <link rel="icon" type="imagem/png" href="./LAYOUT/logo-IF-front-end_shortcut.png" />
     <link rel="stylesheet" type="text/css" href="CSS/bootstrap-grid.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="CSS/main.css" />
     <title>Igor Furtado - Front-end Developer</title>
 </head>
@@ -24,7 +25,7 @@
 
     <div class="ift-preloader">
         <div class="ift-preloader-inner">
-            <img src="../LAYOUT/logo-ift-front-end - preloader.svg" class="ift-margin-bottom-15">
+            <img src="./LAYOUT/logo-ift-front-end - preloader.svg" class="ift-margin-bottom-15">
         </div>
         <p class="ift-text-light ift-margin-top-15">Carregando...</p>
 
@@ -97,7 +98,7 @@
 
     <header class="ift-top-bar">
         <div class="ift-logo ift-logo-bigger">
-            <img src="../LAYOUT/logo-ift-front-end.svg" alt="Logo - Igor Furtado - Front-end Developer" />
+            <img src="./LAYOUT/logo-ift-front-end.svg" alt="Logo - Igor Furtado - Front-end Developer" />
         </div>
         <nav class="ift-menu">
             <a href="#">Home</a>
@@ -151,19 +152,14 @@
 
 
     <div class="ift-page-wrapper">
-        <section class="ift-full-height ift-first-section ift-home-presentation" id="ift-home-presentation">
+        <section class="ift-full-height ift-first-section" id="ift-talk-to-me">
             <div class="container-fluid">
-                <div class="row">
+                <div class="row ift-section-middle">
                     <div
-                        class="col-10 col-sm-10 col-md-8 col-lg-10 col-xl-8 offset-md-2 offset-sm-1 offset-lg-1 offset-1 offset-xl-2 ift-display-text">
-                        <h1 class="ift-title ift-text-orange ift-title-x-large">Olá!</h1>
-                        <p class="ift-text-light">Meu nome é <span class="ift-text-orange">Igor Furtado</span>, sou
-                            <span class="ift-text-orange">Front-end
-                                designer</span>. Aqui poderia escrever
-                            mais texto para servir
-                            como resumo bibliográfico, falar um pouco sobre mim.
-                        </p>
-
+                        class="col-10 col-sm-10 col-md-11 col-lg-12 col-xl-12 offset-md-2 offset-sm-1 offset-lg-1 offset-1 offset-xl-1 ift-display-text">
+                        <p class="ift-header ift-text-orange">Olá, meu nome é</p>
+                        <h1 class="ift-subtitle ift-text-white ift-title-x-large">Igor Targino.</h1>
+                        <h2 class="ift-subtitle ift-text-light ift-title-x-large">Construo coisas para a web.</h2>
                         <button class="ift-btn ift-btn-large ift-btn-orange ift-margin-top-15 ift-toggle-modal">Fale
                             comigo!</button>
                     </div>
@@ -175,6 +171,97 @@
                     <img src="imagens/contatos/arrow-down.svg" alt="Scroll-Down" />
                 </div>
             </div>
+        </section>
+        <section class="ift-smaller-height" style="background-color: #000;">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 offset-lg-1 ift-display-text" style="
+                        margin-top: 20px;
+                    ">
+                        <div class="ift-about-center">
+                            <h2 class="ift-subtitle ift-title-large ift-text-orange">Sobre</h2>
+                        </div>
+                        <div>
+                            <div class="ift-float-about ift-home-about-description ift-margin-auto"
+                                data-aos-offset="300" data-aos="fade-right">
+                                <p class="ift-footer ift-text-light ift-text-about ift-margin-top-30">Olá! Meu nome é
+                                    Igor e sou
+                                    Desenvolvedor Front-end e UI Designer. Meu interesse em
+                                    desenvolvimento
+                                    web
+                                    teve início em 2020, quando decidi aprender a programar para automatizar um sistema
+                                    que
+                                    desenvolvia
+                                    durante o meu mestrado. Juntei isso à minha paixão pela criação de artes para mídias
+                                    sociais e
+                                    dei
+                                    início a uma nova jornada de conhecimento em minha vida.
+                                    <br><br>
+                                    Engenheiro civil de formação, a mudança de área de atuação foi desafiadora. Porém, o
+                                    processo
+                                    criativo
+                                    por trás de um simples HTML & CSS me entusiasma a crescer e desbravar diariamente o
+                                    mundo do
+                                    desenvolvimento web. Aprender novos métodos e tecnologias de Front-End e UI design
+                                    tornou-se
+                                    minha
+                                    rotina.
+                                    <br><br>
+                                    Meu objetivo é construir produtos e experiências digitais para uma grande variedade
+                                    de
+                                    clientes, oferecendo soluções inovadoras.
+                                    <br><br>
+                                    Aqui estão algumas das tecnologias com as quais estou trabalhando:
+                                </p>
+                            </div>
+                            <div class="ift-float-about ift-about-center" data-aos-offset="350" data-aos="fade-left">
+                                <img class="ift-home-presentation" src="./LAYOUT/igor-foto-photoshop-tiny.png">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 offset-lg-1 ift-boxes-margin ift-about-center">
+                        <div style="display: inline-block;">
+                            <div class="ift-horizontal-align">
+                                <div class="ift-home-about-boxes">
+                                    <div class="ift-text-light ift-footer-text ift-home-about-justify">
+                                        HTML 5
+                                        <img src="./LAYOUT/html_logo.png" class="ift-margin-top-5">
+                                    </div>
+                                </div>
+                                <div class="ift-home-about-boxes-bottom">
+                                    <div class="ift-text-light ift-footer-text ift-home-about-justify">
+                                        CSS 3
+                                        <img src="./LAYOUT/css_logo.png" class="ift-margin-top-5">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="ift-horizontal-align">
+                                <div class="ift-home-about-boxes">
+                                    <div class="ift-text-light ift-footer-text ift-home-about-justify">
+                                        JS ES6+
+                                        <img src="./LAYOUT/js_logo.png" class="ift-margin-top-5">
+                                    </div>
+                                </div>
+                                <div class="ift-home-about-boxes-bottom">
+                                    <div class="ift-text-light ift-footer-text ift-home-about-justify">
+                                        BOOTSTRAP
+                                        <img src="./LAYOUT/bootstrap_logo.png" class="ift-margin-top-5">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="ift-horizontal-align">
+                                <div class="ift-home-about-boxes">
+                                    <div class="ift-text-light ift-footer-text ift-home-about-justify">
+                                        FIGMA
+                                        <img src="./LAYOUT/figma_logo.png" class="ift-margin-top-5">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
         <section class="ift-full-height" id="ift-home-portfolio">
             <div class="container-fluid ift-no-padding">
@@ -373,16 +460,79 @@
                     </div>
                 </div>
         </section>
+        <section class="ift-medium-height" style="background-color: #000;">
+            <div class="container-fluid">
+                <div class="row ift-center-titles">
+                    <div class="col-12" style="
+                        margin-top: 90px;
+                    ">
+                        <div>
+                            <h2 class="ift-subtitle ift-title-large ift-text-orange ift-margin-bottom-15">Serviços</h2>
+                        </div>
+                        <div style="display: inline-block;" class="ift-margin-top-15 ift-margin-bottom-15">
+                            <div class="ift-home-services-boxes" data-aos-offset="300" data-aos="fade-up">
+                                <h4 class="ift-text-light ift-footer-text ift-margin-bottom-15">Criação de sites</h4>
+                                <p class="ift-text-light ift-footer">Desenvolvimento de sites profissionais e
+                                    responsivos, blogs,
+                                    comércios virtuais,
+                                    portfólios, etc.</p>
+                                <lord-icon src="https://cdn.lordicon.com/qhgmphtg.json" trigger="loop"
+                                    colors="primary:#ffffff,secondary:#fb8500" stroke="40"
+                                    style="width:100px;height:100px" class="ift-margin-top-10">
+                                </lord-icon>
+                            </div>
+                            <div class="ift-side-by-side ift-home-services-boxes-top ift-margin-middle-card" data-aos-offset="300"
+                                data-aos="fade-up">
+                                <h4 class="ift-text-light ift-footer-text ift-margin-bottom-15">UI Design</h4>
+                                <p class="ift-text-light ift-footer">Prototipagem e criação de layouts que se adequam às
+                                    necessidades do cliente.</p>
+                                <lord-icon src="https://cdn.lordicon.com/yrvfcoqx.json" trigger="loop"
+                                    colors="primary:#ffffff,secondary:#fb8500" stroke="40"
+                                    style="width:100px;height:100px" class="ift-margin-top-10">
+                                </lord-icon>
+                            </div>
+                            <div class="ift-side-by-side ift-home-services-boxes" data-aos-offset="300"
+                                data-aos="fade-up">
+                                <h4 class="ift-text-light ift-footer-text ift-margin-bottom-15">Captura de Leads</h4>
+                                <p class="ift-text-light ift-footer">Criação de campanhas, páginas de capturas de leads
+                                    e imagens
+                                    para as redes sociais.</p>
+                                <lord-icon src="https://cdn.lordicon.com/zpxybbhl.json" trigger="loop"
+                                    colors="primary:#ffffff,secondary:#fb8500" stroke="40"
+                                    style="width:100px;height:100px" class="ift-margin-top-10">
+                                </lord-icon>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                        <div
+                            class="ift-subtitle ift-title-large ift-text-orange ift-margin-top-15 ift-margin-bottom-15">
+                            Entre em contato</div>
+                        <div class="ift-footer-text ift-text-light ift-margin-top-15 ift-margin-bottom-30">Se deseja
+                            bater um papo
+                            comigo, envie uma mensagem!</div>
+                        <a href="#ift-talk-to-me"
+                            class="ift-btn ift-btn-large ift-btn-orange ift-margin-top-15 ift-margin-bottom-15 ift-btn-center ift-slow">Fale
+                            comigo!</a>
+                    </div>
+                    <div class="ift-footer ift-title-small ift-text-light ift-footer-credits">
+                        Designed & Built by Igor Targino. ©2021
+                    </div>
+                </div>
+
+        </section>
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.js"
         integrity="sha512-Q4MHJkk3u8P63v1aX0I7jvo5AoMFi53HbxUBhURp8x7xrqD+nsHZrbBEQVObpqE+MAAVB/Ye9ZlKkM44a1q9WA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/shortcuts/inview.js"
         integrity="sha512-lDPhoDDO4Yo8R30iVj1lk+iFDvNqJhL8STytqe+ZjVMBWvZDjHPbe27zZJAsNit2AtOJevmhVf+ZjuzDojGm7Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
     <script src="js/anime.min.js"></script>
     <script src="js/slider.js"></script>
     <script src="js/main.js"></script>
@@ -401,6 +551,8 @@
     </script>
 
     <script>
+
+        AOS.init();
         // Animando elementos on Scroll -> Waypoints (biblioteca externa)
 
         var waypoint = new Waypoint({
@@ -411,55 +563,7 @@
             offset: '80%' // Dispara uma ação quando scrollar até 80% da página.
         });
     </script>
+
 </body>
 
 </html>
-
-
-
-
-<!-- Begin Mailchimp Signup Form -->
-<div id="mc_embed_signup">
-    <form action="https://icloud.us5.list-manage.com/subscribe/post?u=3d4da86d1e591ca883f77e81a&amp;id=83c694331a"
-        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
-        novalidate>
-        <div id="mc_embed_signup_scroll">
-            <h2>Subscribe</h2>
-            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-            <div class="mc-field-group">
-                <label for="mce-NOME">Nome <span class="asterisk">*</span>
-                </label>
-                <input type="text" value="" name="NOME" class="required" id="mce-NOME">
-            </div>
-            <div class="mc-field-group">
-                <label for="mce-EMAIL">E-mail <span class="asterisk">*</span>
-                </label>
-                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-            </div>
-            <div class="mc-field-group size1of2">
-                <label for="mce-PHONE">Telefone </label>
-                <input type="text" name="PHONE" class="" value="" id="mce-PHONE">
-            </div>
-            <div class="mc-field-group">
-                <label for="mce-SITE">Site </label>
-                <input type="url" value="" name="SITE" class=" url" id="mce-SITE">
-            </div>
-            <div class="mc-field-group">
-                <label for="mce-MENSAGEM">Deixe abaixo sua mensagem <span class="asterisk">*</span>
-                </label>
-                <input type="text" value="" name="MENSAGEM" class="required" id="mce-MENSAGEM">
-            </div>
-            <div id="mce-responses" class="clear">
-                <div class="response" id="mce-error-response" style="display:none"></div>
-                <div class="response" id="mce-success-response" style="display:none"></div>
-            </div>
-            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-                    name="b_3d4da86d1e591ca883f77e81a_83c694331a" tabindex="-1" value=""></div>
-            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
-                    class="button"></div>
-        </div>
-    </form>
-</div>
-
-<!--End mc_embed_signup-->
