--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap"
         rel="stylesheet">
-    <link rel="icon" type="imagem/png" href="../../LAYOUT/logo-IF-front-end_shortcut.png" />
+    <link rel="icon" type="imagem/png" href="../LAYOUT/logo-IF-front-end_shortcut.png" />
     <link rel="stylesheet" type="text/css" href="../CSS/bootstrap-grid.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../CSS/main.css" />
@@ -28,7 +28,7 @@
 
     <header class="ift-top-bar">
         <div class="ift-logo ift-logo-bigger">
-            <img src="../../LAYOUT/logo-ift-front-end.svg" alt="Logo - Igor Furtado - Front-end Developer" />
+            <img src="../LAYOUT/logo-ift-front-end.svg" alt="Logo - Igor Furtado - Front-end Developer" />
         </div>
         <nav class="ift-menu">
             <a href="../index.html">Home</a>
@@ -43,7 +43,7 @@
 
     <nav class="ift-menu-mob ift-menu-is-closed">
         <a href="../index.html">Home</a>
-        <a href="../pages/portfolio.html">Portfólio</a>
+        <a href="portfolio.html">Portfólio</a>
         <a href="#">Sobre</a>
     </nav>
 
@@ -82,89 +82,120 @@
 
 
     <div class="ift-page-wrapper">
+        <div class="ift-avatar-sobre" style="margin-top: 50px;">
+            <div class="ift-box-img">
+                <img src="../LAYOUT/igor-foto-photoshop-tiny.png" class="ift-img-responsive" style="margin: auto;"
+                    alt="Igor Furtado Front-end Developer" title="Igor Furtado Front-end Developer">
+            </div>
+        </div>
 
-        <section class="ift-about-offset-top ift-about-height">
-            <div class="container-fluid">
-                <div class="row ift-margin-center-big">
-                    <div class="col-sm-12 col-lg-4 order-2 order-lg-1 ift-avatar-sobre">
-                        <div class="ift-box-img">
-                            <img src="../../LAYOUT/igor-foto-photoshop-tiny.png" class="ift-img-responsive"
-                                alt="Igor Furtado Front-end Developer" title="Igor Furtado Front-end Developer">
+
+        <div class="ift-about-title ift-margin-bottom-30" style="text-align: center;">
+            <h1 class="ift-title ift-title-x-large ift-text-light">
+                Igor <span class="ift-text-orange">Targino</span>
+            </h1>
+        </div>
+
+        <div class="ift-text-light">
+            <h4 style="text-align: center;" class="ift-subtitle ift-text-orange ift-margin-bottom-15">
+                Um pouco sobre mim
+            </h4>
+            <div style="width: 70%; margin: auto; margin-top: 30px;">
+                <p style="text-align: justify;">
+                    Olá! Meu nome é Igor e sou Desenvolvedor Front-end e UI Designer. Meu interesse em
+                    desenvolvimento web teve início em 2020, quando decidi aprender a programar para
+                    automatizar um sistema que desenvolvia durante o meu mestrado. Juntei isso à minha
+                    paixão pela criação de artes para mídias sociais e dei início a uma nova jornada de
+                    conhecimento em minha vida.
+                    <br><br>
+                    Engenheiro civil de formação, a mudança de área de atuação foi desafiadora. Porém, o
+                    processo criativo por trás de um simples HTML & CSS me entusiasma a crescer e desbravar
+                    diariamente o mundo do desenvolvimento web. Aprender novos métodos e tecnologias de
+                    Front-End e UI design tornou-se minha rotina.
+                </p>
+            </div>
+
+            <div>
+                <div class="ift-contact-info-inner ift-margin-top-30 ift-margin-bottom-30" style="text-align: center;">
+
+                    <div class="ift-social-links-circle ift-margin-bottom-30" style="margin-left: 15px;">
+
+                        <a href="https://www.instagram.com/igorfurtado_/"
+                            class="ift-social ift-background-orange ift-text-black ift-margin-right-30" target="_blank">
+                            <ion-icon name="logo-instagram"></ion-icon>
+                        </a>
+
+                        <a href="https://twitter.com/igorfurtado_"
+                            class="ift-social ift-background-orange ift-text-black ift-margin-right-30" target="_blank">
+                            <ion-icon name="logo-twitter"></ion-icon>
+                        </a>
+
+                        <a href="https://www.linkedin.com/in/igorfurtado/"
+                            class="ift-social ift-background-orange ift-text-black ift-margin-right-30" target="_blank">
+                            <ion-icon name="logo-linkedin"></ion-icon>
+                        </a>
+
+                    </div>
+
+                    <p class="ift-margin-bottom-15">igorfurtadot@gmail.com</p>
+                    <p class="ift-margin-bottom-15">+55 (83) 9 9623-7452</p>
+                    <a style="margin: auto;" href="https://github.com/igorfurtado"
+                        class="ift-btn ift-btn-large ift-btn-dark" target="_blank">GitHub
+                        <ion-icon name="logo-github"></ion-icon>
+                    </a>
+
+                </div>
+            </div>
+
+        </div>
+
+        <div style="text-align: center;">
+            <div style="display: inline-block; position: relative; bottom: -100px; margin-bottom: 30px;">
+                <div class="ift-horizontal-align">
+                    <div class="ift-home-about-boxes">
+                        <div class="ift-text-light ift-footer-text ift-home-about-justify">
+                            HTML 5
+                            <img src="../LAYOUT/html_logo.png" class="ift-margin-top-5">
                         </div>
                     </div>
-                    <div class="col-11 col-sm-11 col-lg-7 order-1 order-lg-2 ift-margin-left-20 ift-margin-left-30">
-                        <div class="ift-title-about ift-margin-bottom-30">
-                            <h1 class="ift-title ift-title-x-large ift-text-light">
-                                Igor <span class="ift-text-orange">Furtado</span>
-                            </h1>
+                    <div class="ift-home-about-boxes-bottom">
+                        <div class="ift-text-light ift-footer-text ift-home-about-justify">
+                            CSS 3
+                            <img src="../LAYOUT/css_logo.png" class="ift-margin-top-5">
                         </div>
-                        <div class="ift-info-about ift-text-light">
-                            <h4 class="ift-subtitle ift-text-orange ift-margin-bottom-15">
-                                Um pouco sobre mim
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum vitae error in
-                                aliquid suscipit eaque recusandae, tempore optio dignissimos maiores reprehenderit
-                                architecto quod harum magni distinctio officia nobis assumenda provident!
-                            </p>
-
-                            <div class="ift-contact-info-inner ift-margin-top-30">
-
-                                <div class="ift-social-links-circle ift-margin-bottom-30">
-
-                                    <a href="https://www.instagram.com/igorfurtado_/"
-                                        class="ift-social ift-background-orange ift-text-black ift-margin-right-30"
-                                        target="_blank">
-                                        <ion-icon name="logo-instagram"></ion-icon>
-                                    </a>
-
-                                    <a href="https://twitter.com/igorfurtado_"
-                                        class="ift-social ift-background-orange ift-text-black ift-margin-right-30"
-                                        target="_blank">
-                                        <ion-icon name="logo-twitter"></ion-icon>
-                                    </a>
-
-                                    <a href="https://www.linkedin.com/in/igorfurtado/"
-                                        class="ift-social ift-background-orange ift-text-black ift-margin-right-30"
-                                        target="_blank">
-                                        <ion-icon name="logo-linkedin"></ion-icon>
-                                    </a>
-
-                                </div>
-
-                                <p class="ift-margin-bottom-15">igorfurtadot@gmail.com</p>
-                                <p class="ift-margin-bottom-15">+55 (83) 9 9623-7452</p>
-                                <a href="https://github.com/igorfurtado"
-                                    class="ift-btn ift-btn-large ift-btn-dark" target="_blank">GitHub
-                                    <ion-icon name="logo-github"></ion-icon></a>
-
-                            </div>
-
+                    </div>
+                </div>
+                <div class="ift-horizontal-align">
+                    <div class="ift-home-about-boxes">
+                        <div class="ift-text-light ift-footer-text ift-home-about-justify">
+                            JS ES6+
+                            <img src="../LAYOUT/js_logo.png" class="ift-margin-top-5">
                         </div>
-                        <div class="ift-habilites-about">
-                            <div class="ift-skills-block">
-                                <h4 class="ift-subtitle ift-text-orange ift-margin-bottom-15">
-                                    Habilidades
-                                </h4>
-                                <ul class="ift-text-light ift-page-list">
-                                    <li>HTML</li>
-
-                                    <li>CSS</li>
-
-                                    <li>Javascript</li>
-
-                                    <li>Bootstrap</li>
-
-                                    <li>Figma</li>
-                                </ul>
-                            </div>
+                    </div>
+                    <div class="ift-home-about-boxes-bottom">
+                        <div class="ift-text-light ift-footer-text ift-home-about-justify">
+                            BOOTSTRAP
+                            <img src="../LAYOUT/bootstrap_logo.png" class="ift-margin-top-5">
+                        </div>
+                    </div>
+                </div>
+                <div class="ift-horizontal-align">
+                    <div class="ift-home-about-boxes">
+                        <div class="ift-text-light ift-footer-text ift-home-about-justify">
+                            FIGMA
+                            <img src="../LAYOUT/figma_logo.png" class="ift-margin-top-5">
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
 
+        <div class="ift-footer ift-title-small ift-text-light ift-footer-credits"
+            style="position: relative; margin-top: 50px;">
+            Designed & Built by Igor Targino. ©2021
+        </div>
     </div>
+
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
