Atualização de Paths

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         </div>
         <nav class="ift-menu">
             <a href="#">Home</a>
-            <a href="pages/portfolio.html">Portfólio</a>
-            <a href="pages/sobre.html">Sobre</a>
+            <a href="portfolio/index.html">Portfólio</a>
+            <a href="sobre/index.html">Sobre</a>
         </nav>
     </header>
 
@@ -113,8 +113,8 @@
 
     <nav class="ift-menu-mob ift-menu-is-closed">
         <a href="#">Home</a>
-        <a href="pages/portfolio.html">Portfólio</a>
-        <a href="pages/sobre.html">Sobre</a>
+        <a href="portfolio/index.html">Portfólio</a>
+        <a href="sobre/index.html">Sobre</a>
     </nav>
 
     <div class="ift-contact-info ift-background-black ift-text-light">
@@ -326,9 +326,9 @@
                                                 <div
                                                     class="ift-portfolio-item-box d-none d-sm-none d-lg-block ift-scale-right">
                                                 </div>
-                                                <img src="imagens/thumb_imagens/thumb-2.jpg" alt="Nome do projeto 01"
+                                                <img src="./imagens/thumb_imagens/thumb-2.jpg" alt="Nome do projeto 01"
                                                     title="Nome do projeto 01" class="ift-scale-up" />
-                                                <a href="pages/portfolio/manage-it.html"
+                                                <a href="./portfolio/manage_it/index.html"
                                                     class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
                                                     site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
@@ -357,7 +357,7 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="imagens/thumb_imagens/thumb-1.jpg" alt="Nome do projeto 02"
+                                                <img src="./imagens/thumb_imagens/thumb-1.jpg" alt="Nome do projeto 02"
                                                     title="Nome do projeto 02" />
                                                 <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
@@ -386,7 +386,7 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="imagens/thumb_imagens/thumb-3.jpg" alt="Nome do projeto 03"
+                                                <img src="./imagens/thumb_imagens/thumb-3.jpg" alt="Nome do projeto 03"
                                                     title="Nome do projeto 03" />
                                                 <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
@@ -415,7 +415,7 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="imagens/thumb_imagens/thumb-4.jpg" alt="Nome do projeto 04"
+                                                <img src="./imagens/thumb_imagens/thumb-4.jpg" alt="Nome do projeto 04"
                                                     title="Nome do projeto 04" />
                                                 <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
@@ -444,7 +444,7 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="imagens/thumb_imagens/thumb-5.jpg" alt="Nome do projeto 05"
+                                                <img src="./imagens/thumb_imagens/thumb-5.jpg" alt="Nome do projeto 05"
                                                     title="Nome do projeto 05" />
                                                 <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
@@ -481,8 +481,8 @@
                                     style="width:100px;height:100px" class="ift-margin-top-10">
                                 </lord-icon>
                             </div>
-                            <div class="ift-side-by-side ift-home-services-boxes-top ift-margin-middle-card" data-aos-offset="300"
-                                data-aos="fade-up">
+                            <div class="ift-side-by-side ift-home-services-boxes-top ift-margin-middle-card"
+                                data-aos-offset="300" data-aos="fade-up">
                                 <h4 class="ift-text-light ift-footer-text ift-margin-bottom-15">UI Design</h4>
                                 <p class="ift-text-light ift-footer">Prototipagem e criação de layouts que se adequam às
                                     necessidades do cliente.</p>
