Atualização de Paths

--- a/404.html
+++ b/404.html
@@ -10,10 +10,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap"
         rel="stylesheet">
-    <link rel="icon" type="imagem/png" href="../LAYOUT/logo-IF-front-end_shortcut.png" />
-    <link rel="stylesheet" type="text/css" href="CSS/bootstrap-grid.min.css" />
+    <link rel="icon" type="imagem/png" href="./LAYOUT/logo-IF-front-end_shortcut.png" />
+    <link rel="stylesheet" type="text/css" href="./CSS/bootstrap-grid.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../CSS/main.css" />
+    <link rel="stylesheet" type="text/css" href="./CSS/main.css" />
     <title>Igor Furtado - Front-end Developer - 404 Error</title>
 </head>
 
@@ -27,13 +27,13 @@
                         <h1 class="ift-title ift-text-orange ift-title-x-large">Oxe!</h1>
                         <p class="ift-text-light">A página que você tentou acessar não existe mais ou você digitou um
                             endereço errado.</p>
-                        <a href="../index.html"
+                        <a href="./index.htm"
                             class="ift-btn ift-btn-large ift-btn-orange ift-margin-top-15 ift-toggle-modal">Retornar à
                             home</a>
                     </div>
 
                     <div class="col-12 col-sm-12 col-lg-7 ift-margin-top-404">
-                        <img src="../imagens/logo-IF-erro-404.svg" class="ift-img-responsive" />
+                        <img src="./imagens/logo-IF-erro-404.svg" class="ift-img-responsive" />
                     </div>
 
                 </div>
@@ -42,7 +42,7 @@
 
     </div>
 
-    <script src="../js/main.js"></script>
+    <script src="./js/main.js"></script>
 
 </body>
 
