--- a/sobre/index.html
+++ b/sobre/index.html
@@ -31,8 +31,8 @@
             <img src="../LAYOUT/logo-ift-front-end.svg" alt="Logo - Igor Furtado - Front-end Developer" />
         </div>
         <nav class="ift-menu">
-            <a href="../index.html">Home</a>
-            <a href="../portfolio/index.html">Portfólio</a>
+            <a href="../">Home</a>
+            <a href="../portfolio/">Portfólio</a>
             <a href="#">Sobre</a>
         </nav>
     </header>
@@ -42,8 +42,8 @@
     </button>
 
     <nav class="ift-menu-mob ift-menu-is-closed">
-        <a href="../index.html">Home</a>
-        <a href="../portfolio/index.html">Portfólio</a>
+        <a href="../">Home</a>
+        <a href="../portfolio/">Portfólio</a>
         <a href="#">Sobre</a>
     </nav>
 
