Correção de Paths (boas práticas)

--- a/sobre/index.html
+++ b/sobre/index.html
@@ -42,7 +42,7 @@
     </button>
 
     <nav class="ift-menu-mob ift-menu-is-closed">
-        <a href="../">Home</a>
+        <a href="/">Home</a>
         <a href="../portfolio/">Portfólio</a>
         <a href="#">Sobre</a>
     </nav>
