Correção do Path (boas práticas)

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -33,9 +33,9 @@
             <img src="../LAYOUT/logo-ift-front-end.svg" alt="Logo - Igor Furtado - Front-end Developer" />
         </div>
         <nav class="ift-menu">
-            <a href="../index.html">Home</a>
+            <a href="../">Home</a>
             <a href="#">Portfólio</a>
-            <a href="../sobre/index.html">Sobre</a>
+            <a href="../sobre/">Sobre</a>
         </nav>
     </header>
 
@@ -44,9 +44,9 @@
     </button>
 
     <nav class="ift-menu-mob ift-menu-is-closed">
-        <a href="../index.html">Home</a>
+        <a href="../">Home</a>
         <a href="#">Portfólio</a>
-        <a href="../sobre/index.html">Sobre</a>
+        <a href="../sobre/">Sobre</a>
     </nav>
 
     <div class="ift-contact-info ift-background-black ift-text-light">
@@ -109,8 +109,7 @@
                                         <img src="../imagens/thumb_imagens/thumb-2.jpg" alt="Nome do projeto 01"
                                             title="Nome do projeto 01" data-aos="flip-left" data-aos-offset="300"
                                             data-aos-delay="300" />
-                                        <a href="./manage_it/index.html"
-                                            class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
+                                        <a href="./manage_it/" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
                                             <ion-icon name="arrow-redo-sharp"></ion-icon>
                                         </a>
                                     </div>
