--- a/portfolio/manage_it/index.html
+++ b/portfolio/manage_it/index.html
@@ -65,9 +65,9 @@
             <img src="../../LAYOUT/logo-ift-front-end.svg" alt="Logo - Igor Furtado - Front-end Developer" />
         </div>
         <nav class="ift-menu">
-            <a href="../../index.html">Home</a>
-            <a href="../../portfolio/index.html">Portfólio</a>
-            <a href="../../sobre/index.html">Sobre</a>
+            <a href="../../">Home</a>
+            <a href="../">Portfólio</a>
+            <a href="../../sobre/">Sobre</a>
         </nav>
     </header>
 
@@ -76,9 +76,9 @@
     </button>
 
     <nav class="ift-menu-mob ift-menu-is-closed">
-        <a href="../../index.html">Home</a>
-        <a href="../../portfolio.html">Portfólio</a>
-        <a href="../../sobre.html">Sobre</a>
+        <a href="../../">Home</a>
+        <a href="../">Portfólio</a>
+        <a href="../../sobre/">Sobre</a>
     </nav>
 
     <div class="ift-contact-info ift-background-black ift-text-light">
