Correção do Path (boas práticas)

--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
                         <h1 class="ift-title ift-text-orange ift-title-x-large">Oxe!</h1>
                         <p class="ift-text-light">A página que você tentou acessar não existe mais ou você digitou um
                             endereço errado.</p>
-                        <a href="./index.htm"
+                        <a href="./"
                             class="ift-btn ift-btn-large ift-btn-orange ift-margin-top-15 ift-toggle-modal">Retornar à
                             home</a>
                     </div>
