--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         </div>
         <nav class="ift-menu">
             <a href="#">Home</a>
-            <a href="portfolio/index.html">Portfólio</a>
-            <a href="sobre/index.html">Sobre</a>
+            <a href="portfolio/">Portfólio</a>
+            <a href="sobre/">Sobre</a>
         </nav>
     </header>
 
@@ -113,8 +113,8 @@
 
     <nav class="ift-menu-mob ift-menu-is-closed">
         <a href="#">Home</a>
-        <a href="portfolio/index.html">Portfólio</a>
-        <a href="sobre/index.html">Sobre</a>
+        <a href="portfolio/">Portfólio</a>
+        <a href="sobre/">Sobre</a>
     </nav>
 
     <div class="ift-contact-info ift-background-black ift-text-light">
@@ -328,7 +328,7 @@
                                                 </div>
                                                 <img src="./imagens/thumb_imagens/thumb-2.jpg" alt="Nome do projeto 01"
                                                     title="Nome do projeto 01" class="ift-scale-up" />
-                                                <a href="./portfolio/manage_it/index.html"
+                                                <a href="./portfolio/manage_it/"
                                                     class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
                                                     site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
