Correção last section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap"
+        href="https://fonts.apis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap"
         rel="stylesheet">
     <link rel="icon" type="imagem/png" href="./LAYOUT/logo-IF-front-end_shortcut.png" />
     <link rel="stylesheet" type="text/css" href="CSS/bootstrap-grid.min.css" />
@@ -500,7 +500,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" style="
+                    margin-bottom: 90px;">
                         <div
                             class="ift-subtitle ift-title-large ift-text-orange ift-margin-top-15 ift-margin-bottom-15">
                             Entre em contato</div>
