Criação do projeto 2: sua festa!

--- a/index.html
+++ b/index.html
@@ -326,8 +326,9 @@
                                                 <div
                                                     class="ift-portfolio-item-box d-none d-sm-none d-lg-block ift-scale-right">
                                                 </div>
-                                                <img src="./imagens/thumb_imagens/thumb-2.jpg" alt="Nome do projeto 01"
-                                                    title="Nome do projeto 01" class="ift-scale-up" />
+                                                <img src="./imagens/thumb_imagens/thumb-2.jpg"
+                                                    alt="Manage It! Aplicativo Mobile"
+                                                    title="Manage It! Aplicativo Mobile" class="ift-scale-up" />
                                                 <a href="./portfolio/manage_it/"
                                                     class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
                                                     site
@@ -345,9 +346,10 @@
                                         <div class="col-sm-12 col-md-12 col-lg-4 order-2 order-sm-2 order-md-1">
                                             <div class="ift-portfolio-item-info ift-text-light">
                                                 <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
-                                                    Meu segundo
-                                                    projeto</h1>
-                                                <p class="ift-margin-bottom-30">Aguarde...</p>
+                                                    Sua festa!</h1>
+                                                <p class="ift-margin-bottom-30">Sistema elaborado para calcular a
+                                                    quantidade de
+                                                    comida e bebida necessária para uma festa.</p>
                                                 <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
                                                     projeto</a>
                                             </div>
@@ -356,9 +358,9 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="./LAYOUT/em_breve.png" alt="Nome do projeto 02"
-                                                    title="Nome do projeto 02" />
-                                                <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
+                                                <img src="./LAYOUT/em_breve.png" alt="Sua festa!" title="Sua festa!" />
+                                                <a href="./portfolio/sua_festa/"
+                                                    class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
                                                 </a>
                                             </div>
