--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -106,8 +106,8 @@
                                 <div class="col-sm-12 col-lg-6 offset-lg-2 order-1 order-lg-2 col-xl-6 offset-xl-1">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="../imagens/thumb_imagens/thumb-2.jpg" alt="Nome do projeto 01"
-                                            title="Nome do projeto 01" data-aos="flip-left" data-aos-offset="300"
+                                        <img src="../imagens/thumb_imagens/thumb-2.jpg" alt="Manege It - App"
+                                            title="Manege It - App" data-aos="flip-left" data-aos-offset="300"
                                             data-aos-delay="300" />
                                         <a href="./manage_it/" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
                                             <ion-icon name="arrow-redo-sharp"></ion-icon>
@@ -125,9 +125,10 @@
                                     <div class="ift-portfolio-item-info ift-text-light" data-aos="fade-left"
                                         data-aos-delay="200">
                                         <h1 class="ift-title ift-tile-large-lh ift-margin-bottom-30">
-                                            Meu segundo
-                                            projeto</h1>
-                                        <p class="ift-margin-bottom-30">Aguarde...</p>
+                                            Sua festa!</h1>
+                                        <p class="ift-margin-bottom-30">Sistema elaborado para calcular a quantidade de
+                                            comida e bebida necessária para uma festa.
+                                        </p>
                                         <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
                                             projeto</a>
                                     </div>
@@ -135,10 +136,9 @@
                                 <div class="col-sm-12 col-lg-6 order-1 order-lg-2">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="../LAYOUT/em_breve.png" alt="Nome do projeto 02"
-                                            title="Nome do projeto 02" data-aos="flip-left" data-aos-offset="300"
-                                            data-aos-delay="300" />
-                                        <a href="#" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
+                                        <img src="../LAYOUT/em_breve.png" alt="Sua festa!" title="Sua festa!"
+                                            data-aos="flip-left" data-aos-offset="300" data-aos-delay="300" />
+                                        <a href="./sua_festa/" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
                                             <ion-icon name="arrow-redo-sharp"></ion-icon>
                                         </a>
                                     </div>
