--- a/index.html
+++ b/index.html
@@ -358,7 +358,8 @@
                                             class="col-sm-12 col-md-12 col-lg-6 offset-lg-1 order-1 order-sm-1 order-md-2">
                                             <div class="ift-portfolio-item-thumb">
                                                 <div class="ift-portfolio-item-box d-none d-sm-none d-lg-block"></div>
-                                                <img src="./LAYOUT/em_breve.png" alt="Sua festa!" title="Sua festa!" />
+                                                <img src="./LAYOUT/sua_festa_mockup.png" alt="Sua festa!"
+                                                    title="Sua festa!" />
                                                 <a href="./portfolio/sua_festa/"
                                                     class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
