--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -136,7 +136,7 @@
                                 <div class="col-sm-12 col-lg-6 order-1 order-lg-2">
                                     <div class="ift-portfolio-item-thumb">
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
-                                        <img src="../LAYOUT/em_breve.png" alt="Sua festa!" title="Sua festa!"
+                                        <img src="../LAYOUT/sua_festa_mockup.png" alt="Sua festa!" title="Sua festa!"
                                             data-aos="flip-left" data-aos-offset="300" data-aos-delay="300" />
                                         <a href="./sua_festa/" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
                                             <ion-icon name="arrow-redo-sharp"></ion-icon>
