--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                                                 <img src="./LAYOUT/sua_festa_mockup.png" alt="Sua festa!"
                                                     title="Sua festa!" />
                                                 <a href="./portfolio/sua_festa/"
-                                                    class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
+                                                    class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
                                                 </a>
                                             </div>
