--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -109,7 +109,8 @@
                                         <img src="../imagens/thumb_imagens/thumb-2.jpg" alt="Manege It - App"
                                             title="Manege It - App" data-aos="flip-left" data-aos-offset="300"
                                             data-aos-delay="300" />
-                                        <a href="./manage_it/" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
+                                        <a href="./manage_it/" class="ift-btn ift-btn-medium ift-btn-dark"
+                                            target="_blank">Visitar site
                                             <ion-icon name="arrow-redo-sharp"></ion-icon>
                                         </a>
                                     </div>
@@ -138,7 +139,8 @@
                                         <div class="ift-portfolio-item-box d-none d-lg-block" data-aos="zoom-in"></div>
                                         <img src="../LAYOUT/sua_festa_mockup.png" alt="Sua festa!" title="Sua festa!"
                                             data-aos="flip-left" data-aos-offset="300" data-aos-delay="300" />
-                                        <a href="./sua_festa/" class="ift-btn ift-btn-medium ift-btn-dark">Visitar site
+                                        <a href="./sua_festa/" class="ift-btn ift-btn-medium ift-btn-dark"
+                                            target="_blank">Visitar site
                                             <ion-icon name="arrow-redo-sharp"></ion-icon>
                                         </a>
                                     </div>
