--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -130,7 +130,8 @@
                                         <p class="ift-margin-bottom-30">Sistema elaborado para calcular a quantidade de
                                             comida e bebida necessária para uma festa.
                                         </p>
-                                        <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
+                                        <a href="https://github.com/igorfurtado/sua_festa"
+                                            class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
                                             projeto</a>
                                     </div>
                                 </div>
