--- a/index.html
+++ b/index.html
@@ -350,7 +350,8 @@
                                                 <p class="ift-margin-bottom-30">Sistema elaborado para calcular a
                                                     quantidade de
                                                     comida e bebida necessária para uma festa.</p>
-                                                <a href="#" class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
+                                                <a href="https://github.com/igorfurtado/sua_festa"
+                                                    class="ift-btn ift-btn-large ift-btn-orange-no-scale">Ver
                                                     projeto</a>
                                             </div>
                                         </div>
@@ -361,7 +362,8 @@
                                                 <img src="./LAYOUT/sua_festa_mockup.png" alt="Sua festa!"
                                                     title="Sua festa!" />
                                                 <a href="./portfolio/sua_festa/"
-                                                    class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar site
+                                                    class="ift-btn ift-btn-medium ift-btn-dark" target="_blank">Visitar
+                                                    site
                                                     <ion-icon name="arrow-redo-sharp"></ion-icon>
                                                 </a>
                                             </div>
